<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_AlarmKeypadVirtual" Id="{4a622b68-99c1-4b10-90bb-5e4e6e33d5bd}">
    <Declaration><![CDATA[TYPE ST_AlarmKeypadVirtual :
STRUCT
	bButton1			: BOOL;
	bButton2			: BOOL;
	bButton3			: BOOL;
	bButton4			: BOOL;
	bButton5			: BOOL;
	bButton6			: BOOL;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>